# haven

./: Cargo.toml  README.md  config.toml  docker-compose.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
db/: Cargo.toml
db/src/: config.rs  database.rs  lib.rs
dns/: Cargo.toml
dns/src/: config.rs  lib.rs  server.rs
dns/src/query/: mod.rs
docs/: design.md
haven-dns/: Cargo.toml
haven-dns/src/: server.rs
migrations/: 0001-pg-init.sql
