[workspace]
members = ["dns", "cli", "db"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["haven"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12.19", features = ["json"] }
hickory-proto = "0.25.2"
log = "0.4"
env_logger = "0.11.8"
futures = "0.3"
anyhow = "1.0"

haven-dns = { path = "dns" }
haven-db = { path = "db" }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
