[package]
name = "haven"
description = "Haven DNS CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
anyhow.workspace = true
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

haven-dns.workspace = true
haven-db.workspace = true
