[package]
name = "haven-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
