[package]
name = "haven-dns"
description = "Haven DNS library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
hickory-proto.workspace = true
log.workspace = true
futures.workspace = true
anyhow.workspace = true
sqlx.workspace = true
haven-db.workspace = true
